unpackaged/objects/Progress_Report__c.object
<CustomObject>
    <fields>
        <fullName>Academic_Advising__c</fullName>
        <label>Academic Advising</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Capstone_Advisor__c</fullName>
        <label>Capstone Advisor</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty_Advisor__c</fullName>
        <label>Faculty Advisor</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Head_of_Study__c</fullName>
        <label>Head of Studies for Major</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Semester__c</fullName>
        <label>Semester</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Semester 2</fullName>
                </value>
                <value>
                    <fullName>Semester 1</fullName>
                    <isActive>false</isActive>
                    <label>Semester 1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Academic Progress Reports</relationshipLabel>
        <relationshipName>Progress_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Department__c</fullName>
        <label>Sub Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_of_Study__c</fullName>
        <label>Year of Study</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Freshmen</fullName>
                </value>
                <value>
                    <fullName>Sophomore</fullName>
                </value>
                <value>
                    <fullName>Junior</fullName>
                </value>
                <value>
                    <fullName>Senior</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Progress Report</label>
    <nameField>
        <displayFormat>APR-{0000000000}</displayFormat>
        <label>Progress Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Progress Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>